AC_PROG_LIBTOOL = ranlib
RANLIB = ranlib
METASOURCES = AUTO
noinst_HEADERS = application.h base.h box.h cursesstring.h descriptor.h input.h \
	statusbar.h strings.h textviewer.h windows.h
lib_LIBRARIES = libplimgui.a
libplimgui_a_SOURCES = application.cpp base.cpp box.cpp cursesstring.cpp \
	descriptor.cpp hashnodes.cpp input.cpp keybindings.cpp keyboard.cpp lexer.cpp \
	pallete.cpp roster.cpp rosteritems.cpp statusbar.cpp stdafx.cpp strings.cpp \
	textline.cpp textviewer.cpp treenode.cpp treenodes.cpp windows.cpp
_SOURCES = cKeyboardDescriptor.h
_SOURCES = cKeyboardDescriptor.h keyboard.h
_SOURCES = cKeyboardDescriptor.h keyboard.h pallete.h
_SOURCES = cKeyboardDescriptor.h keybindings.h keyboard.h pallete.h
AM_CXXFLAGS = `pkg-config --cflags sigc++-2.0`
_SOURCES = cCursesString.h
_SOURCES = lexer.h
_SOURCES = hashnodes.h
_SOURCES = roster.h
